--- a/views/news.ejs
+++ b/views/news.ejs
@@ -13,7 +13,7 @@
 	</div>
 	<div class="form-group">
 		<label for="exampleInputPassword1">Price</label>
-		<input type="number" name="Price" class="form-control" placeholder="price" id="exampleInputPassword1" min="0.1" step="0.1">
+		<input type="text" name="Price" class="form-control" placeholder="price" id="exampleInputPassword1" min="0.1" step="0.1">
 	  </div>
 	<div class="form-group">
 	  <label for="exampleInputPassword1">Image URL</label>
